# T9Emulator

./: .gitignore  CMakeLists.txt  README.md
src/: dictionary.cpp  dictionary.h  main.cpp  t9engine.cpp  t9engine.h  trie.cpp  trie.h
tests/: CMakeLists.txt  test.cpp
